# Operating-Systems-HW3

./: CMakeLists.txt  README.md  viewer
score4/: main.c
score4-5/: client  client.c  server  server.c
score5/: main.c
score6/: main.c
score6-8/: client  client.c  server  server.c  viewer  viewer.c
score7/: data.c  main_flower.c  main_gardeners.c
score8/: data.c  main_flower.c  main_gardeners.c
