cmake_minimum_required(VERSION 3.24)
project(Operating_Systems_HW2)

set(CMAKE_CXX_STANDARD 14)

add_executable(OS_HW2_4
        score4/main.c)

add_executable(OS_HW2_5
        score5/main.c)

add_executable(OS_HW2_6
        score6/main.c)

add_executable(OS_HW2_7
        score7/main_flower.c
        score7/main_gardeners.c
        score7/data.c)

add_executable(OS_HW2_8
        score8/main_flower.c
        score8/main_gardeners.c
        score8/data.c)

